Make 0.4 compatible with markdown

--- a/0.4.md
+++ b/0.4.md
@@ -1,3 +1,5 @@
+```mermaid
 sequenceDiagram
     Browser->>Server: An HTTP post requrest to the address new_note
     Server->>Browser: HTTP status code 302, requesting an HTTP GET to /notes
+```
