--- a/part0/0.4.md
+++ b/part0/0.4.md
@@ -1,3 +1,4 @@
+# Exercise 0.4
 ```mermaid
 sequenceDiagram
     Browser->>Server: An HTTP post requrest to the address new_note. I have a note for you.
